--- a/index.html
+++ b/index.html
@@ -1,149 +1,150 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hors Satan</title>
-  <style>
-    /* Reset minimale */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hors Satan</title>
 
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      line-height: 1.5;
-      background: #ffffff;
-      color: #000000;
-      padding: 20px;
-    }
+<style>
 
-    a {
-      color: #000;
-      text-decoration: none;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    a:hover {
-      text-decoration: underline;
-    }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 1.4;
+  background: #ffffff;
+  color: #000000;
+  padding: 14px 18px;
+}
 
-    /* Header */
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      margin-bottom: 80px;
-    }
+a {
+  color: #000;
+  text-decoration: none;
+}
 
-    .header-left {
-      max-width: 70%;
-    }
+a:hover {
+  color: #777;   /* diventa grigio al hover */
+  text-decoration: none;
+}
 
-    .header-right {
-      text-align: left;
-      max-width: 300px;
-    }
+.header span,
+.header a {
+  margin-right: 6px;
+}
 
-    .italic {
-      font-style: italic;
-    }
+/* AREA CENTRALE */
+.center-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;      /* due rientri dal blocco sopra */
+  margin-bottom: 2em;   /* due rientri dal blocco sotto */
+}
 
-    .section {
-      margin-bottom: 40px;
-      max-width: 600px;
-    }
+/* RIQUADRO GRANDE */
+.current-box {
+  width: 520px;              /* grande riquadro */
+  min-height: 100px;        /* altezza ampia */
+  display: flex;
+  align-items: center;      /* centra verticalmente */
+  justify-content: center;  /* centra orizzontalmente */
+}
 
-    .section-title {
-      margin-bottom: 10px;
-    }
+/* TESTO dentro il riquadro */
+.current-content {
+  width: 260px;             /* larghezza esatta del testo */
+  text-align: left;         /* giustificato a sinistra */
+}
 
-    .exhibition {
-      margin-bottom: 6px;
-    }
+.section-title {
+  margin-bottom: 6px;
+}
 
-    /* Layout generale simile allo screenshot */
-    .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      width: 100%;
-    }
+.italic {
+  font-style: italic;
+}
 
-    .left-column {
-      max-width: 600px;
-    }
+/* Past exhibitions */
+.past {
+  width: 600px;
+  margin-top: 2em;      /* distanza minima dal blocco current */
+}
 
-    .right-column {
-      max-width: 320px;
-    }
+.exhibition {
+  margin-bottom: 4px;
+}
 
-    /* Responsive */
-    @media (max-width: 800px) {
-      .container {
-        flex-direction: column;
-      }
+/* Mobile */
+@media (max-width: 700px) {
 
-      .right-column {
-        margin-top: 40px;
-      }
-    }
-  </style>
+  .current-box {
+    width: 100%;
+    min-height: auto;
+  }
+
+  .past {
+    width: 100%;
+  }
+
+}
+
+</style>
 </head>
+
 <body>
 
-  <div class="header">
-    <div class="header-left">
-      Hors Satan Via Mazzanti 4, Verona
-      <a href="mailto:mail@horssatan.it">mail@horssatan.it</a>
-      +39 3911770040
-      Open Thu–Sat 12–18 and by Appointment
-      <a href="#">Newsletter</a>
-      <a href="#">Instagram</a>
-    </div>
-  </div>
+<div class="header">
+  <span>Hors Satan Via Mazzanti 4, Verona</span>
+  <a href="mailto:mail@horssatan.it">mail@horssatan.it</a>
+  <span>+39 3911770040</span>
+  <span>Open Thu–Sat 12–18 and by Appointment</span>
+  <a href="#">Newsletter</a>
+  <a href="#">Instagram</a>
+</div>
 
-  <div class="container">
 
-    <!-- Colonna sinistra -->
-    <div class="left-column">
-      <div class="section">
-        <div class="section-title">Past Exhibitions:</div>
+<!-- BLOCCO CENTRALE CON RIQUADRO GRANDE -->
+<div class="center-wrapper">
 
-        <div class="exhibition">
-          Helmut Federle <span class="italic">Paintings</span>
-          November 6 – December 19, 2025
-        </div>
+  <div class="current-box">
 
-        <div class="exhibition">
-          Cathy Wilkes
-          <span class="italic">
-            What We Are Is Just Epitomes of the Same and You Should Never Come to the Monster Town
-          </span>
-          September 9 – October 28, 2025
-        </div>
-
-      </div>
-    </div>
-
-    <!-- Colonna destra -->
-    <div class="right-column">
-      <div class="section">
-        <div>Current:</div>
-
-        <div>Michael Snow</div>
-
-        <div class="italic">La région centrale</div>
-
-        <div>January 8 – March 24, 2026</div>
-
-        <div class="italic">Opening January 8, 5–9 pm</div>
-      </div>
+    <div class="current-content">
+      <div>Current:</div>
+      <div>Michael Snow</div>
+      <div class="italic">La région centrale</div>
+      <div>January 8 – March 24, 2026</div>
+      <div class="italic">Opening January 8, 5–9 pm</div>
     </div>
 
   </div>
+
+</div>
+
+
+<!-- Past exhibitions -->
+<div class="past">
+
+  <div class="section-title">Past Exhibitions:</div>
+
+  <div class="exhibition">
+    Helmut Federle <span class="italic">Paintings</span>
+    November 6 – December 19, 2025
+  </div>
+
+  <div class="exhibition">
+    Cathy Wilkes
+    <span class="italic">
+    What We Are Is Just Epitomes of the Same and You Should Never Come to the Monster Town
+    </span>
+    September 9 – October 28, 2025
+  </div>
+
+</div>
 
 </body>
 </html>
