--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ a:hover {
 <body>
 
 <div class="header">
-  <span>Hors Satan Via Mazzanti 4, Verona</span>
+  Hors Satan Via Mazzanti 4, Verona 
   <a href="mailto:mail@horssatan.it">mail@horssatan.it</a>
-  <span>+39 3911770040</span>
-  <span>Open Thu–Sat 12–18 and by Appointment</span>
+   +39 3911770040 
+   Open Thu–Sat 12–18 and by Appointment 
   <a href="#">Newsletter</a>
   <a href="#">Instagram</a>
 </div>
