--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ a:hover {
 
 /* TESTO dentro il riquadro */
 .current-content {
-  width: 260px;             /* larghezza esatta del testo */
+  display: inline-block;              /* larghezza esattamente quanto il testo */
   text-align: left;         /* giustificato a sinistra */
 }
 
