--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a:hover {
 <!-- Past exhibitions -->
 <div class="past">
 
-  <div class="section-title">Past Exhibitions:</div>
+  <div class="exhibition">Past Exhibitions:</div>
 
   <div class="exhibition">
     Helmut Federle <span class="italic">Paintings</span>
