--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 
 <style>
 
+  @font-face {
+  font-family: 'Univers55';
+  src: url('fonts/Univers-55-Roman.woff2') format('woff2'),
+       url('fonts/Univers-55-Roman.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Univers55';
+  src: url('fonts/Univers-65-Bold.woff2') format('woff2'),
+       url('fonts/Univers-65-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,8 +32,8 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
+  font-family: 'Univers55', Arial, Helvetica, sans-serif;
+  font-size: 12px;
   line-height: 1.4;
   background: #ffffff;
   color: #000000;
