--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ a:hover {
     <div class="current-content">
       <div>Current:</div>
       <div>Michael Snow</div>
-      <div class="italic">La région centrale</div>
+      <div><strong>La région centrale</strong></div>
       <div>January 8 – March 24, 2026</div>
       <div class="italic">Opening January 8, 5–9 pm</div>
     </div>
