--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ a:hover {
     <div class="current-content">
       <div>Current:</div>
       <div>Michael Snow</div>
-      <div><strong>La région centrale</strong></div>
+      <div class='italic'>La région centrale</div>
       <div>January 8 – March 24, 2026</div>
-      <div class="italic">Opening January 8, 5–9 pm</div>
+      <div><strong>Opening January 8, 5–9 pm</strong>strong></div>
     </div>
 
   </div>
