--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a:hover {
       <div>Michael Snow</div>
       <div class='italic'>La région centrale</div>
       <div>January 8 – March 24, 2026</div>
-      <div><strong>Opening January 8, 5–9 pm</strong>strong></div>
+      <div><strong>Opening January 8, 5–9 pm</strong></div>
     </div>
 
   </div>
