--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="it"><head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hors Satan</title>
 
 <style>
@@ -37,7 +35,7 @@ body {
   line-height: 1.4;
   background: #ffffff;
   color: #000000;
-  padding: 14px 18px;
+  padding: 20px;
 }
 
 a {
@@ -134,7 +132,7 @@ a:hover {
     <div class="current-content">
       <div>Current:</div>
       <div>Michael Snow</div>
-      <div class='italic'>La région centrale</div>
+      <div class="italic">La région centrale</div>
       <div>January 8 – March 24, 2026</div>
       <div><strong>Opening January 8, 5–9 pm</strong></div>
     </div>
@@ -147,22 +145,17 @@ a:hover {
 <!-- Past exhibitions -->
 <div class="past">
 
-  <div class="exhibition">Past Exhibitions:</div>
+  <div>Past Exhibitions:</div>
 
-  <div class="exhibition">
-    Helmut Federle <span class="italic">Paintings</span>
-    November 6 – December 19, 2025
-  </div>
+  <div>
+    Helmut Federle <span class="italic">Paintings</span> November 6 - December 19, 2025</div>
 
-  <div class="exhibition">
-    Cathy Wilkes
-    <span class="italic">
-    What We Are Is Just Epitomes of the Same and You Should Never Come to the Monster Town
-    </span>
-    September 9 – October 28, 2025
-  </div>
+  <div>
+    Cathy Wilkes <span class="italic">What We Are Is Just Epitomes of the Same</span> September 9 - October 28, 2025
+    </div>
 
 </div>
 
-</body>
-</html>
+
+
+</body></html>
